updated chart function

--- a/VNM_WM_preprocess.ipynb
+++ b/VNM_WM_preprocess.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,8 @@
     "    read_spss_file,\n",
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
+    "    generate_MEMID,\n",
+    "    subset_edu_save,\n",
     "    add_total_year,\n",
     "    merge_hh_hl_data,\n",
     "    subset_hl_df,\n",
@@ -45,13 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load women_imports.py\n",
     "from women_analysis import (\n",
-    "    generate_WMID,\n",
     "    generate_str_replace_dict,\n",
     "    create_anc_4_visits,\n",
     "    create_anc_3_components,\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,9 +101,8 @@
      "text": [
       "The file -- wm_2021.sav -- has the following shape: Rows: 11294; Columns: 458\n",
       "HHID is NOT unique\n",
-      "WMID is unique\n",
       "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 11294; Columns: 451\n",
+      "Updated -- Rows: 11294; Columns: 450\n",
       "Checking if any rows are duplicates...\n",
       "The are no duplicate rows\n",
       "The number of mothers with a birth in the past two years is: 1566\n"
@@ -115,9 +115,6 @@
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
-    "\n",
-    "# Create WMID to facilitate merge into U5 file\n",
-    "generate_WMID(df, country, year)\n",
     "\n",
     "# Add Total, Year\n",
     "add_total_year(df, year)\n",
@@ -133,26 +130,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1543"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.HHID.nunique()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,19 +138,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Create Mother edu [mother_edu] --- #\n",
-    "df = create_mother_edu(df, country, year)"
+    "df = create_mother_edu(df, country, year, recode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'AVERAGE': 0.0183049147442327, 'LARGER THAN AVERAGE': 0.0, 'SMALLER THAN AVERAGE': 0.2652671755725191, 'NO RESPONSE': nan, 'VERY LARGE': 0.034482758620689655, 'VERY SMALL': 0.775, 'DK': 0.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:290: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  agg_value_prop_dict[agg_value] = numerator / denominator\n"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -206,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,18 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2014.sav -- has the following shape: Rows: 10190; Columns: 258\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 10190; Columns: 260\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1484\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
-    "\n",
-    "# Create WMID to facilitate merge into U5 file\n",
-    "generate_WMID(df, country, year)\n",
     "\n",
     "# Add Total, Year\n",
     "add_total_year(df, year)\n",
@@ -265,19 +270,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Create Mother edu [mother_edu] --- #\n",
-    "df = create_mother_edu(df, country, year)"
+    "df = create_mother_edu(df, country, year, recode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Larger than average': 0.0, 'Average': 0.01977401129943503, 'Very small': 0.75, 'Smaller than average': 0.3850806451612903, 'Missing': nan, 'Very large': 0.0, 'DK': nan}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:290: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  agg_value_prop_dict[agg_value] = numerator / denominator\n"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -310,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,18 +363,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2011.sav -- has the following shape: Rows: 12115; Columns: 235\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 12115; Columns: 238\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1363\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
-    "\n",
-    "# Create WMID to facilitate merge into U5 file\n",
-    "generate_WMID(df, country, year)\n",
     "\n",
     "# Add Total, Year\n",
     "add_total_year(df, year)\n",
@@ -376,19 +409,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Create Mother edu [mother_edu] --- #\n",
-    "df = create_mother_edu(df, country, year)"
+    "df = create_mother_edu(df, country, year, recode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Average': 0.019211065573770492, 'Smaller than average': 0.3813131313131313, 'Missing': 1.0, 'Larger than average': 0.0, 'Very small': 0.7333333333333333, 'Very large': 0.0, 'DK': 0.0}\n"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -421,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,18 +494,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2006.sav -- has the following shape: Rows: 9471; Columns: 252\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 9471; Columns: 255\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1023\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
-    "\n",
-    "# Create WMID to facilitate merge into U5 file\n",
-    "generate_WMID(df, country, year)\n",
     "\n",
     "# Add Total, Year\n",
     "add_total_year(df, year)\n",
@@ -487,19 +540,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Create Mother edu [mother_edu] --- #\n",
-    "df = create_mother_edu(df, country, year)"
+    "df = create_mother_edu(df, country, year, recode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Smaller than average': 0.30319148936170215, 'Average': 0.029783393501805054, 'Larger than average': 0.0035460992907801418, 'Very large': 0.08333333333333333, 'Very small': 0.5666666666666667, 'nan': nan, 'DK': 0.125}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:290: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  agg_value_prop_dict[agg_value] = numerator / denominator\n"
+     ]
+    }
+   ],
    "source": [
     "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
     "# df = create_anc_4_visits(df, country, year)\n",
@@ -532,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -572,9 +642,8 @@
      "text": [
       "The file -- wm_2000.sav -- has the following shape: Rows: 9252; Columns: 182\n",
       "HHID is NOT unique\n",
-      "WMID is unique\n",
       "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 9252; Columns: 187\n",
+      "Updated -- Rows: 9252; Columns: 186\n",
       "Checking if any rows are duplicates...\n",
       "The are no duplicate rows\n",
       "The number of mothers with a birth in the past two years is: 550\n"
@@ -587,9 +656,6 @@
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
-    "\n",
-    "# Create WMID to facilitate merge into U5 file\n",
-    "generate_WMID(df, country, year)\n",
     "\n",
     "# Add Total, Year\n",
     "add_total_year(df, year)\n",
@@ -613,19 +679,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Create Mother edu [mother_edu] --- #\n",
-    "df = create_mother_edu(df, country, year)"
+    "df = create_mother_edu(df, country, year, recode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Average': 0.01683937823834197, 'Very large': 0.0, 'Larger than average': 0.0125, 'Smaller than average': 0.40625, 'Very small': 1.0, \"Don't know\": nan, 'nan': nan}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:290: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  agg_value_prop_dict[agg_value] = numerator / denominator\n"
+     ]
+    }
+   ],
    "source": [
     "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
     "# df = create_anc_4_visits(df, country, year)\n",
@@ -658,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
