--- a/VNM_WM_tabulate.ipynb
+++ b/VNM_WM_tabulate.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_women_2000_working.csv -- has the following shape: Rows: 550; Columns: 14\n",
+      "The file -- VNM_women_2006_working.csv -- has the following shape: Rows: 1023; Columns: 17\n",
+      "The file -- VNM_women_2011_working.csv -- has the following shape: Rows: 1363; Columns: 19\n",
+      "The file -- VNM_women_2014_working.csv -- has the following shape: Rows: 1484; Columns: 23\n",
+      "The file -- VNM_women_2021_working.csv -- has the following shape: Rows: 1566; Columns: 23\n"
+     ]
+    }
+   ],
    "source": [
     "# Set parameters\n",
     "country = 'VNM'\n",
@@ -83,9 +95,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_women_2000_working.csv -- has the following shape: Rows: 550; Columns: 14\n",
+      "Warning: Unable to create sheet for var anc_4_visits\n",
+      "Warning: Unable to create sheet for var anc_3_components\n",
+      "Warning: Unable to create sheet for var inst_delivery\n",
+      "Warning: Unable to create sheet for var caesarean_del\n",
+      "Warning: Unable to create sheet for var pnc_mother\n",
+      "Warning: Unable to create sheet for var early_bf\n",
+      "The file -- VNM_women_2006_working.csv -- has the following shape: Rows: 1023; Columns: 17\n",
+      "Warning: Unable to create sheet for var anc_4_visits\n",
+      "Warning: Unable to create sheet for var caesarean_del\n",
+      "Warning: Unable to create sheet for var pnc_mother\n",
+      "The file -- VNM_women_2011_working.csv -- has the following shape: Rows: 1363; Columns: 19\n",
+      "Warning: Unable to create sheet for var pnc_mother\n",
+      "The file -- VNM_women_2014_working.csv -- has the following shape: Rows: 1484; Columns: 23\n",
+      "The file -- VNM_women_2021_working.csv -- has the following shape: Rows: 1566; Columns: 23\n"
+     ]
+    }
+   ],
    "source": [
     "## TOTAL DATASET\n",
     "\n",
@@ -130,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_women_combined.csv -- has the following shape: Rows: 5986; Columns: 23\n"
+     ]
+    }
+   ],
    "source": [
     "# Read in combined file\n",
     "df = read_csv_file(country, recode, file_type='combined')\n",
@@ -143,22 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set parameters\n",
+    "recode = 'women'\n",
     "var_dep_list = ['anc_4_visits', 'anc_3_components', 'inst_delivery', 'caesarean_del', 'pnc_mother', 'low_bw', 'early_bf'] \n",
     "\n",
     "ind_var_list = ['residence', 'region', 'mother_edu_biv', 'wealth_q', 'eth_hoh_biv', 'elderly_hoh', 'sex_hoh']\n",
     "\n",
     "# Run bivariate (extract WLS regression params)\n",
-    "output = {var_dep: pd.DataFrame({ind_var: extract_regression_params(df, var_dep, ind_var) for ind_var in ind_var_list}) for var_dep in var_dep_list}"
+    "output = {var_dep: pd.DataFrame({ind_var: extract_regression_params(df, var_dep, ind_var, recode) for ind_var in ind_var_list}) for var_dep in var_dep_list}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
