fixed child weighted count issue in frequencies

--- a/VNM_CH_tabulate.ipynb
+++ b/VNM_CH_tabulate.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,20 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "pd.set_option(\"display.max_rows\", 1500)\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "\n",
     "import statsmodels.api as sm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load tabulate_imports.py\n",
-    "from tabulate import (\n",
+    "from tabulate_vars import (\n",
     "    read_csv_file,\n",
     "    concatenate_dfs,\n",
     "    save_combined,\n",
@@ -51,9 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_children_2000_working.csv -- has the following shape: Rows: 3105; Columns: 21\n",
+      "The file -- VNM_children_2006_working.csv -- has the following shape: Rows: 2680; Columns: 21\n",
+      "The file -- VNM_children_2011_working.csv -- has the following shape: Rows: 3678; Columns: 30\n",
+      "The file -- VNM_children_2014_working.csv -- has the following shape: Rows: 3316; Columns: 42\n",
+      "The file -- VNM_children_2021_working.csv -- has the following shape: Rows: 4329; Columns: 42\n"
+     ]
+    }
+   ],
    "source": [
     "# Set parameters\n",
     "country = 'VNM'\n",
@@ -83,9 +98,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_children_2000_working.csv -- has the following shape: Rows: 3105; Columns: 21\n",
+      "Warning: Unable to create sheet for var mdd_ch\n",
+      "Warning: Unable to create sheet for var mmf_ch\n",
+      "Warning: Unable to create sheet for var mad_ch\n",
+      "The file -- VNM_children_2006_working.csv -- has the following shape: Rows: 2680; Columns: 21\n",
+      "Warning: Unable to create sheet for var mdd_ch\n",
+      "Warning: Unable to create sheet for var mmf_ch\n",
+      "Warning: Unable to create sheet for var mad_ch\n",
+      "The file -- VNM_children_2011_working.csv -- has the following shape: Rows: 3678; Columns: 30\n",
+      "Warning: Unable to create sheet for var mdd_ch\n",
+      "Warning: Unable to create sheet for var mad_ch\n",
+      "The file -- VNM_children_2014_working.csv -- has the following shape: Rows: 3316; Columns: 42\n",
+      "The file -- VNM_children_2021_working.csv -- has the following shape: Rows: 4329; Columns: 42\n"
+     ]
+    }
+   ],
    "source": [
     "## TOTAL DATASET\n",
     "\n",
@@ -111,8 +146,8 @@
     "    for var in vars:\n",
     "\n",
     "        try:\n",
-    "            df = df.dropna(subset=[var])\n",
-    "            output = output_mean_table(df, var, ind_vars, wt)\n",
+    "            # df = df.dropna(subset=[var])\n",
+    "            output = output_mean_table(df.dropna(subset=[var]), var, ind_vars, wt)\n",
     "            sheet_name = str(var) + '_weighted'\n",
     "            output.to_excel(xlwriter, sheet_name=sheet_name)\n",
     "        \n",
@@ -131,9 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- VNM_children_combined.csv -- has the following shape: Rows: 17108; Columns: 42\n"
+     ]
+    }
+   ],
    "source": [
     "# Read in combined file\n",
     "df = read_csv_file(country, recode, file_type='combined')\n",
@@ -144,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
